# AIModule4

./: Advertisement.ipynb  Code1.ipynb  Code10.ipynb  Code11.ipynb  Code12.ipynb  Code13.ipynb  Code14.ipynb  Code2.ipynb  Code3.ipynb  Code4.ipynb  Code5.ipynb  Code6.ipynb  Code7.ipynb  Code8.ipynb  Code9.ipynb  main.py  practice1.ipynb  practice2.ipynb  practice3.ipynb  practice4.ipynb  project.ipynb  pyproject.toml
Student Management System/: Student.py  StudentManagementSystem.py  app.py  course_encoder.pkl  course_model.pkl  interest_encoder.pkl  main.py  recommender.py  student_data.csv  train_model.py
Student Management System/static/: style.css
Student Management System/templates/: add_student.html  display_student.html  index.html  recommend.html  search_student.html
